# rust_projects

./: .gitignore
actix-rhai/: Cargo.toml
actix-rhai/src/: add.rhai  main.rs
api-calls/: Cargo.toml
async-request/: Cargo.toml
async-request/src/: main.rs
basic-auth/: Cargo.toml
basic-auth/src/: main.rs
csv-reader/: Cargo.toml
csv-reader/src/: main.rs
download-images/: Cargo.toml
firebase_crud/: Cargo.toml
firebase_crud/src/: main.rs
get-request/: Cargo.toml
get-request/src/: main.rs
json-data/: Cargo.toml
json-data/src/: main.rs
project-compression/: Cargo.toml
project-compression/src/: main.rs
rust-eth/: Cargo.toml
rust-eth/src/: contract_deploy.rs  simple_transaction.rs
spotify-rust/: Cargo.toml
spotify-rust/src/: main.rs
unzip-folders/: Cargo.toml
unzip-folders/src/: main.rs
write-json/: Cargo.toml
write-json/src/: main.rs
