[package]
name = "rust-eth"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version="3.1.9", features = ["derive"]}
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", features = ["full"] }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", features = ["ws"] }
eyre = "*"
hex = "*"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tokio = { version = "1", features = ["full"] }

# Use the latest ethers-rs from GitHub
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "main" }

# Patch the svm-rs dependency to use the latest version from GitHub
[patch."https://github.com/roynalnaruto/svm-rs"]
svm-rs = { git = "https://github.com/roynalnaruto/svm-rs", rev = "357d9e217970857eb8b1c6c8093f8d5f867fe62b" }
[[bin]]
name = "transact"
path="src/simple_transactions.rs"


[[bin]]
name = "deploy"
path="src/contract_deploy.rs"
