[package]
edition = "2021"
name = "rust-eth"
version = "0.1.0"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
ethers = { version = "2.0", features = ["legacy"] }
ethers-providers = { version = "2.0", features = ["ws"] }
ethers-solc = { version = "2.0", features = ["full"] } # Use crates.io version
eyre = "0.6"
hex = "0.4"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"

[[bin]]
name = "transact"
path = "src/simple_transactions.rs"

[[bin]]
name = "deploy"
path = "src/contract_deploy.rs"
